--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,11 @@
+
+
+<style>
+    body{background-color: yellow;}
+</style>
+
+<body>
+
 <form action ="/login-submit">
  Prijava: {{info_text}}
  <br>
@@ -9,3 +17,5 @@
  <br>
  <input type="submit"></input>
 </form>
+
+</body>
